Second commit, fleshed out data

--- a/resources/templates/home.html
+++ b/resources/templates/home.html
@@ -26,6 +26,9 @@
 
         <form action="/enter-game" method="post">
             <input type="text" placeholder="enter player one" name="playerOne"/>
+            <input type="text" placeholder="enter player two" name="playerTwo"/>
+            <input type="text" placeholder="enter player two" name="playerOneScore"/>
+            <input type="text" placeholder="enter player two" name="playerTwoScore"/>
             <button type="submit">Enter game</button>
         </form>
     {{/playerName}}
